--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,18 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/news_list"
         android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:title="" />
 
     <item
         android:id="@+id/navigation_map"
         android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_map" />
+        android:title="" />
 
     <item
         android:id="@+id/navigation_list"
         android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_list" />
-
+        android:title="" />
 </menu>
