--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,36 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@+id/news_list">
 
     <fragment
-        android:id="@+id/navigation_home"
-        android:name="com.example.organizer.fragments.home.HomeFragment"
+        android:id="@+id/news_list"
+        android:name="com.example.organizer.ui.home.NewsListFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_news_list" >
+        <action
+            android:id="@+id/action_news_list_to_webFragment"
+            app:destination="@id/webFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_map"
-        android:name="com.example.organizer.fragments.mapsfragment.MapsFragment"
+        android:name="com.example.organizer.ui.mapsfragment.MapsFragment"
         android:label="@string/title_map"
         tools:layout="@layout/fragment_maps" />
 
     <fragment
         android:id="@+id/navigation_list"
-        android:name="com.example.organizer.fragments.reminderlistfragment.ReminderListFragment"
+        android:name="com.example.organizer.ui.reminderlistfragment.ReminderListFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_reminder_list" />
+    <fragment
+        android:id="@+id/webFragment"
+        android:name="com.example.organizer.ui.webfragment.WebFragment"
+        android:label="WebFragment"
+        tools:layout="@layout/web_fragment">
+        <argument
+            android:name="web_link"
+            app:argType="string" />
+    </fragment>
 </navigation>
