--- a/app/src/main/res/layout/fragment_reminder.xml
+++ b/app/src/main/res/layout/fragment_reminder.xml
@@ -71,23 +71,22 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:orientation="horizontal">
 
-            <CheckBox
-                android:id="@+id/checkbox_notification"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:visibility="gone" />
+            <ImageView
+                android:id="@+id/ic_calendar"
+                android:layout_gravity="center_vertical"
+                android:layout_width="15dp"
+                android:background="@drawable/ic_baseline_calendar_today_24"
+                android:layout_height="15dp" />
 
             <TextView
-                android:id="@+id/reminder_text"
+                android:id="@+id/reminder_date_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Reminder"
-                android:visibility="gone" />
+                android:visibility="visible" />
         </LinearLayout>
 
         <LinearLayout
@@ -114,13 +113,6 @@
                 android:visibility="gone" />
 
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/reminder_qr_code_info"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="QRCODE"
-            android:visibility="visible"/>
 
         <EditText
             android:id="@+id/reminder_notes"
@@ -211,13 +203,13 @@
             fab:fab_label="Add share" />
 
         <com.github.clans.fab.FloatingActionButton
-            android:id="@+id/qr_scan_reminder_button"
+            android:id="@+id/notification_reminder_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|right"
             android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
-            android:src="@drawable/qrcode_scan"
+            android:src="@drawable/ic_notifications_none_white_24dp"
             fab:fab_colorNormal="@color/colorPrimary"
             fab:fab_colorPressed="@color/colorPressed"
             fab:fab_colorRipple="@color/colorPrimaryDark"
